--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .bg-hero-image{
-    background-image: url('https://picsum.photos/1300/500');
+    background-image: url("img/protest2.jpg");
     background-position: center center;
 }
 .DES{
